2011-01-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.c (fd_write_n, fd_timed_write_n):
	  Changed "buf" arg type to const.
	* src/libcommon/fd.h: Updated prototypes.

2011-01-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.c: Tweaked spacing.

	* src/libcommon/fd.c (fd_timed_write_iov): Fixed compiler warning for
	  "pointer of type ‘void *’ used in arithmetic".

	* src/libcommon/fd.c: Tweaked comment headers.

2010-10-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/job.c (job_accept): Prevented continued execution of
	  function if unable to set server's socket to client as nonblocking.

	* src/libmunge/m_msg_client.c (_m_msg_client_connect):
	  Fixed fd leak if unable to set client's socket as nonblocking.

	* src/libcommon/fd.c, src/libcommon/fd.h: Re-ordered functions.

	* TODO: Updated.

	* src/libmunge/m_msg_client.c (_m_msg_client_connect):
	  Set client's socket to server as nonblocking.

	* src/libcommon/fd.c (fd_timed_write_iov): Added.
	* src/libcommon/fd.h: Added prototype.
	* src/libcommon/m_msg.c (m_msg_send): Replaced fd_timed_write_n() with
	  fd_timed_write_iov().  Restoring writev() coalescing reclaims some of
	  the lost throughput.

	* src/libcommon/fd.h: Fixed prototype comment for fd_timed_write_n().

2010-08-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.c (fd_is_nonblocking):
	  Changed return value to conditional expression.
	* src/libcommon/fd.h (fd_is_nonblocking):
	  Updated documentation for return value so true is now >0.

	* src/libcommon/fd.c (fd_set_close_on_exec, fd_set_nonblocking):
	  Replaced assert-check of "fd" parm with runtime-check.

	* src/libcommon/fd.c (fd_is_nonblocking): Added.
	* src/libcommon/fd.h: Added prototype.

	* src/munged/job.c (job_accept): Added strerror() to err msg for
	  fd_set_nonblocking() failure.

2010-08-25  Chris Dunlap  <cdunlap@llnl.gov>

	* : Fixed potential deadlock in munged that can occur if clients block