@@ -1,5 +1,7 @@
 2011-01-25  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/libcommon/fd.c: Tweaked var def spacing.
+
 	* src/libcommon/fd.c (fd_write_n, fd_timed_write_n):
 	  Changed "buf" arg type to const.
 	* src/libcommon/fd.h: Updated prototypes.
